# mtuci-rs

./: Cargo.toml
Homework1/: Cargo.toml  cargo.toml
Homework2/: Cargo.toml  task1.rs
Homework2/src/: task1.rs  task2.rs
Homework3/: Cargo.toml
Homework3/src/: hash.rs  vector.rs
src/: main.rs  main1.rs
task_manager/: Cargo.toml
task_manager/src/: main.rs
