[package]
name = "Homework1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ch1"
path = "ch1/src/main.rs"

[[bin]]
name = "ch2"
path = "ch2/src/main.rs"

[[bin]]
name = "ch3"
path = "ch3/src/main.rs"

[[bin]]
name = "ch4"
path = "ch4/src/main.rs"

[[bin]]
name = "FizzBuzz"
path = "FizzBuzz/src/main.rs"

[dependencies]
