[package]
name = "Homework1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ch1"
path = "ch1/src/main.rs"

[[bin]]
name = "guess"
path = "ch2/src/guess.rs"

[[bin]]
name = "arrays"
path = "ch3/src/arrays.rs"

[[bin]]
name = "divisible"
path = "ch3/src/divisible.rs"

[[bin]]
name = "multiple_loops"
path = "ch3/src/multiple_loops.rs"

[[bin]]
name = "shadowing"
path = "ch3/src/shadowing.rs"

[[bin]]
name = "ownership"
path = "ch4/src/ownership.rs"

[[bin]]
name = "slice"
path = "ch4/src/slice.rs"

[[bin]]
name = "transfering_ownership"
path = "ch4/src/transfering_ownership.rs"

[[bin]]
name = "FizzBuzz"
path = "FizzBuzz/src/main.rs"

[dependencies]
